<resources>
    <string name="app_name">Target</string>
    <string name="app_version">1.0_beta</string>
    <string name="app_developer">Ernesto De los Santos Cordero</string>
    <string name="thank_to">Thanks to:</string>
    <string name="icons_8">Icons8</string>
    <string name="icons_8_url">https://icons8.com/</string>
    <string name="roman_nurik">Roman Nurik</string>
    <string name="android_asset_studio">Android Asset Studio</string>
    <string name="android_asset_studio_url">https://romannurik.github.io/AndroidAssetStudio/index.html</string>

    <string name="target">Target</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="current">Current</string>
    <string name="set_target">Set target</string>
    <string name="track">Current / Target</string>
    <string name="set_name">Name your target</string>
    <string name="set_description">Describe your target</string>
    <string name="current_label">Current Label</string>
    <string name="income">Add</string>
    <string name="spend">Subtract</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_about">About</string>
    <string name="action_target_list">Targets</string>
    <string name="minus_sign">-</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="clear_progress">Clear progress?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_description">No description</string>
    <string name="img_desc_show_hide">Show/Hide description.</string>

    <string name="select_action">Select an action!</string>

    <string name="error_no_browser_available">No web browser available.</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_target_list">TargetListActivity</string>
    <string name="title_activity_target_show">TargetShowActivity</string>
    <string name="title_activity_target_edit">TargetEditActivity</string>

</resources>
