<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/target"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/button_show"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/visible_background"
            android:contentDescription="@string/img_desc_show_hide" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="3"
        android:hint="@string/no_description"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        android:hint="@string/track"
        android:textIsSelectable="false"
        android:textSize="22sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include
            layout="@layout/layout_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/text_accomplished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/alice_blue"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:inputType="number" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/tmp_minus"
                app:backgroundTint="@color/pomegranate"
                app:fabSize="mini" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_plus"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/tmp_plus"
                app:backgroundTint="@color/primaryColorDark"
                app:fabSize="normal" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
